# orion

./: .gitignore  CMakeLists.txt  README.md  TODO.md  demo.bat  run.bat  run.sh  trace.bat
data/: editor.json  gui.json
data/parameters/: Part01.json  Part02.json
data/shaders/: fade.frag  fade.vert  grid.frag  grid.vert  material.frag  material.vert  texture.frag  texture.vert
dependencies/: assimp.cmake  bass.cmake  core.cmake  glfw.cmake  glm.cmake  imgui.cmake  jsonxx.cmake  spdlog.cmake  stb.cmake
libs/: argparse.cmake  assimp.cmake  core.cmake  glad.cmake  glm.cmake  jsonxx.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: constants.hpp  demo.cpp  demo.hpp  main.cpp  music.cpp  music.hpp  part.hpp  part01.cpp  part02.cpp  window.cpp  window.hpp
src/engine/: animation.cpp  animation.hpp  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  color.hpp  fade.cpp  fade.hpp  geometry.hpp  grid.cpp  grid.hpp  gui.cpp  gui.hpp  json.cpp  json.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  music.cpp  music.hpp  part.cpp  part.hpp  program.cpp  program.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture2d.cpp  texture2d.hpp  vao.cpp  vao.hpp  window.cpp  window.hpp
src/engine/constants/: color.hpp  geometry.hpp
src/engine/gl/: buffers.cpp  buffers.hpp  fbo.cpp  fbo.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture2d.cpp  texture2d.hpp  vao.cpp  vao.hpp
src/engine/gui/: gui.cpp  gui.hpp  output.cpp  settings.cpp
src/engine/json/: json.cpp  json.hpp  object.cpp  object.hpp
src/engine/material/: data.cpp  material.cpp  material.hpp  shader.cpp  shader.hpp  texture.hpp
src/engine/parameter/: color3.cpp  color3.hpp  constants.hpp  float.cpp  float.hpp  parameter.cpp  parameter.hpp  types.hpp  utils.cpp  utils.hpp  vec3.cpp  vec3.hpp
src/engine/parameters/: bool.cpp  bool.hpp  color3.cpp  color3.hpp  float.cpp  float.hpp  parameter.hpp  parameters.cpp  parameters.hpp  parametersGUI.cpp  parametersIO.cpp  vec3.cpp  vec3.hpp
src/engine/renderer/: fade.hpp  grid.cpp  grid.hpp  sprite.cpp  sprite.hpp
src/engine/scene/: mesh.hpp  model.hpp  scene.cpp  scene.hpp
src/engine/scene/material/: color.cpp  color.hpp  data.cpp  data.hpp  material.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/window/: create-parameters.struct.hpp  editor-window.cpp  editor-window.hpp  editor.cpp  editor.hpp  player-window.cpp  player-window.hpp  player.cpp  player.hpp  window.cpp  window.hpp
