cmake_minimum_required(VERSION 3.10)
include(FetchContent)

project(Demo)
set(CMAKE_CXX_STANDARD 20)

if (WIN32)
	set(CMAKE_OSX_ARCHITECTURES x86_64)
elseif (APPLE)
	set(CMAKE_OSX_ARCHITECTURES arm64 x86_64)
endif ()

include(libs/core.cmake)
include(libs/glfw.cmake)
include(libs/bass.cmake)
include(libs/stb.cmake)
include(libs/glm.cmake)
include(libs/spdlog.cmake)
include(libs/jsonxx.cmake)
include(libs/glad.cmake)
include(libs/assimp.cmake)
include(libs/imgui.cmake)
include(libs/argparse.cmake)

set(COMMON_SRC ${COMMON_SRC} ${LIBS_SRC})
set(DEMO_EXE "demo")
file(GLOB_RECURSE DEMO_SRC src/*.cpp)
set(DEMO_APP_SRC ${COMMON_SRC} ${DEMO_SRC})

add_executable(${DEMO_EXE} ${DEMO_APP_SRC})
target_include_directories(${DEMO_EXE} PUBLIC ${COMMON_INCLUDES})
target_link_libraries(${DEMO_EXE} ${COMMON_LIBS})
set_property(TARGET ${DEMO_EXE} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "..")
